<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:id="@+id/checkbox_layout"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <CheckBox android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_checkbox"
            android:gravity="center_vertical|center_horizontal"
            android:buttonTint="@android:color/holo_green_light"
            android:transitionName=""
            style="@style/rounded_checkbox"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminder_details"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/default_string"
            android:visibility="gone"
            android:id="@+id/reminderId"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/for_reminder_text"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/reminder_for_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/reminder_name"
            android:layout_height="25dp"
            android:text="@string/default_reminder_name"
            android:layout_toRightOf="@id/for_reminder_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_name_text"
            android:text="@string/text_miss_reminder"
            android:layout_marginLeft="5dp"
            android:layout_below="@id/for_reminder_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_name"
            android:text="@string/default_contact_name"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/contact_name_text"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>